Aterações no Css

--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -11,8 +11,8 @@
 
 <div class="box1 mt-5">
     <h2 class="text-center">Relatórios</h2>
-    <div class="box2 p-4">
-        Ordens de Serviço
+    <div class="box2 text-center p-4">
+        Nenhuma Ordem no Momento.
     </div>
 </div>
 
