--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,11 @@
+body {
+    background-image: url(/static/image/bg_home.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
+}
+
 .card1 {
     margin: auto;
     width: 95%;
