--- a/static/css/clientes.css
+++ b/static/css/clientes.css
@@ -1,8 +1,7 @@
 table {
     border: 1px solid black;
-    box-shadow: 2px 2px 8px 3px black;
+    box-shadow: 2px 2px 6px 2px black;
     margin-bottom: 30px;
-    overflow-x: scroll;
 }
 thead {
     text-align: center;
@@ -11,8 +10,14 @@ thead {
     color: white;
 }
 
-th, tr, td {
+tr, td {
     padding: 5px;
+    border: 1px solid black;
+    background-color: rgba(2, 2, 2, 0.7);
+    color: white;
+}
+
+th {
     border: 1px solid black;
 }
 
