--- a/static/css/painelservicos.css
+++ b/static/css/painelservicos.css
@@ -1,10 +1,12 @@
 .box1 {
-    box-shadow: 2px 2px 8px 3px black;
+    box-shadow: 2px 2px 6px 2px black;
     border-radius: 5px;
     width: 95%;
     margin: auto;
     margin-bottom: 30px;
     padding-top: 20px;
+    background-color: rgba(2, 2, 2, 0.7);
+    color: white;
 }
 
 .box2 {
