--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,10 @@
 
     {% endblock %}
 
+    <div class="text-center isp">
+        <p>Copyright © 2026 Feito por ISP Tecnologia</p>
+    </div>
+
     <script src="{{url_for('static',
     filename='js_bootstrap/bootstrap.bundle.min.js')}}"></script>
     {% block scripts %}{% endblock %}
