--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,10 +18,11 @@ body {
 }
 
 .isp {
-    color: white;
+    color: black;
     margin-top: 150px;
+    font-weight: bold;
     margin-bottom: 2px;
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 2px 2px 4px white;
 }
 
 .botao {
