--- a/static/css/os.css
+++ b/static/css/os.css
@@ -17,6 +17,10 @@ tr, td {
     color: white;
 }
 
+th, td {
+    white-space: nowrap;
+}
+
 th {
     border: 1px solid black;
 }
@@ -24,6 +28,25 @@ th {
 .box_os {
     margin: auto;
     width: 95%;
+    overflow-x: auto;
+}
+
+.adicionar {
+    text-decoration: none;
+    font-size: 20px;
+    width: 30px;
+    font-weight: 400;
+    display: block;
+    text-align: center;
+    color: black;
+    background-color: rgb(3, 184, 12);
+    border-radius: 5px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.adicionar:hover {
+    background-color: rgb(3, 131, 10);
 }
 
 .editar {
