--- a/templates/OS.html
+++ b/templates/OS.html
@@ -16,26 +16,29 @@
     <table class="mt-2">
         <thead>
             <tr>
-                <th>Nome</th>
-                <th>Telefone</th>
-                <th>E-mail</th>
-                <th>Cpf</th>
-                <th>Endereço</th>
-                <th>Data do Cadastro</th>
+                <th>Número da Os</th>
+                <th>Cliente</th>
+                <th>Mecânico</th>
+                <th>Problema</th>
+                <th>Diagnóstico</th>
+                <th>Status Os</th>
+                <th>Data Os</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            {% for cliente in listaClientes %}
+            {% for os in resultado %}
             <tr>
-                <td>{{cliente.nome}}</td>
-                <td>{{cliente.telefone}}</td>
-                <td>{{cliente.email}}</th>
-                <td>{{cliente.documento}}</td>
-                <td>{{cliente.endereco}}</td>
-                <td>{{cliente.criado_em}}</td>
+                <td>{{os.id}}</td>
+                <td>{{os.nome}}</td>
+                <td>{{os['mecanicos.nome']}}</td>
+                <td>{{os.problema}}</th>
+                <td>{{os.diagnostico}}</td>
+                <td>{{os.status_os}}</td>
+                <td>{{os.criado_em}}</td>
                 <td>
                     <div class="d-flex">
+                        <a href="{{url_for('ItensOs', id_os = os.id, cliente = os.nome)}}" class="adicionar"><i class="fa fa-plus-square"></i></a>
                         <a href="#" class="editar"><i class="fa fa-edit"></i></a>
                         <a href="#" class="excluir"><i class="fa fa-trash"></i></a>
                     </div>
