--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             <a href="{{url_for('BuscarMecanicos')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-wrench"></i>Mecânicos</a>
-            <a href="{{url_for('CriarOs')}}"
+            <a href="{{url_for('OrdensServico')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-folder-open"></i>Gerenciar OS</a>
             <a href="{{url_for('Estoque')}}"
