--- a/templates/cadastrar_os.html
+++ b/templates/cadastrar_os.html
@@ -10,37 +10,45 @@
 {% block conteudo %}
 
 <div class="container">
-    <form class="form-control p-3 box1">
+    <form class="form-control p-3 box1" action="{{url_for('CadastrarOs')}}" method="post">
         <div>
             <h2 class="text-center">Cadastrar Ordem de Serviço</h2>
         </div>
-        <div>
-            <label class="form-label" for="nome">Nome:</label>
-            <input class="form-control" type="text" id="nome" name="nome">
+        <div class="row mt-3">
+            <div class="col-3">
+                <label class="form-label" for="id_cliente">Cliente:</label>
+                <select name="id_cliente" class="opcoes form-select">
+                    <option value="">-- selecione o cliente --</option>
+                    {% for cliente in clientes %}
+                    <option value="{{cliente.id}}">{{cliente.nome}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="col-3">
+                <label class="form-label" for="id_mecanico">Mecânico Designado:</label>
+                <select name="id_mecanico" class="opcoes form-select">
+                    <option value="">-- selecione o mecânico --</option>
+                    {% for mecanico in mecanicos %}
+                    <option value="{{mecanico.id}}">{{mecanico.nome}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+        <div class="mt-2">
+            <label class="form-label" for="problema_relatado">Problema Relatado:</label>
+            <textarea class="form-control" name="problema_relatado"></textarea>
         </div>
         <div>
-            <label class="form-label" for="telefone">Telefone:</label>
-            <input class="form-control" type="text" id="telefone" name="telefone">
+            <label class="form-label" for="diagnostico">Diagnóstico:</label>
+            <textarea class="form-control" name="diagnostico"></textarea>
         </div>
         <div>
-            <label class="form-label" for="email">E-mail:</label>
-            <input class="form-control" type="email" id="email" name="email">
-        </div>
-        <div>
-            <label class="form-label" for="documento">Documento:</label>
-            <input class="form-control" type="text" id="documento" name="documento">
-        </div>
-        <div>
-            <label class="form-label" for="enderco">Endereço:</label>
-            <input class="form-control" type="text" id="endereco" name="endereco">
-        </div>
-        <div>
-            <label class="form-label" for="senha">Senha:</label>
-            <input class="form-control" type="password" id="senha" name="senha">
+            <label class="form-label" for="status_os">Status:</label>
+            <input class="form-control" type="text" name="status_os">
         </div>
         <div class="d-flex justify-content-center gap-2 mt-4">
             <div>
-                <a href="{{url_for('CriarOs')}}" class="btn btn-primary">Voltar</a>
+                <a href="{{url_for('OrdensServico')}}" class="btn btn-primary">Voltar</a>
             </div>
             <div>
                 <button type="submit" class="btn btn-success">Cadastrar</button>
