--- a/templates/cadastrarveiculos.html
+++ b/templates/cadastrarveiculos.html
@@ -36,7 +36,7 @@
         </div>
         <div class="mt-3">
             <label class="form-label" for="id_cliente">Cliente:</label>
-            <select name="id_cliente" id="id_cliente" class="opcoes">
+            <select name="id_cliente" class="opcoes form-select">
                 <option value="">-- selecione o cliente --</option>
                 {% for cliente in resultado %}
                 <option value="{{cliente.id}}">{{cliente.nome}}</option>
