--- a/static/css/cadastrarcategoria.css
+++ b/static/css/cadastrarcategoria.css
@@ -13,3 +13,15 @@ body {
     color: white;
     margin-top: 50px;
 }
+
+@media (max-width: 800px) {
+    body {
+        height: 100vh;
+        padding-top: 50px;
+    }
+
+    .box1 {
+        width: 95%;
+        margin: auto;
+    }
+}
