--- a/static/css/cadastrarcliente.css
+++ b/static/css/cadastrarcliente.css
@@ -14,3 +14,15 @@ body {
     margin-bottom: 30px;
     color: white;
 }
+
+@media (max-width: 800px) {
+    body {
+        height: 100vh;
+        padding-top: 50px;
+    }
+
+    .box1 {
+        width: 95%;
+        margin: auto;
+    }
+}
