--- a/static/css/cadastrarveiculo.css
+++ b/static/css/cadastrarveiculo.css
@@ -20,3 +20,15 @@ body {
     width: auto;
     color: white;
 }
+
+@media (max-width: 800px) {
+    body {
+        height: 100vh;
+        padding-top: 50px;
+    }
+
+    .box1 {
+        width: 95%;
+        margin: auto;
+    }
+}
