--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,31 @@
                     class="fas fa-sign-out-alt"></i>Sair</a>
         </div>
     </div>
+    <div class="card_celular">
+        <div class="box d-lg-flex justify-content-lg-center gap-lg-2">
+            <a href="{{url_for('PainelServicos')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-columns"></i></a>
+            <a href="{{url_for('BuscarClientes')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-user"></i></a>
+            <a href="{{url_for('BuscarVeiculos')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-car"></i></a>
+            <a href="{{url_for('BuscarMecanicos')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-wrench"></i></a>
+            <a href="{{url_for('OrdensServico')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-folder-open"></i></a>
+            <a href="{{url_for('Estoque')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-box"></i></a>
+            <a href="{{url_for('logout')}}"
+                class="botao-menu botao justify-content-center align-items-center"><i
+                    class="fas fa-sign-out-alt"></i></a>
+        </div>
+    </div>
     {% block conteudo %}
 
     {% endblock %}
