--- a/templates/estoque.html
+++ b/templates/estoque.html
@@ -11,9 +11,9 @@
 
 <div class="box_estoque d-flex flex-column mt-4">
     <div>
-        <a href="{{url_for('CadastrarCategoria')}}" class="botao-menu botao_estoque"><i
+        <a href="{{url_for('CadastrarCategoria')}}" class="botao-menu botao_estoque mb-2 mb-lg-0"><i
                 class="fas fa-car-battery"></i>Cadastrar Categoria</a>
-        <a href="{{url_for('CadastrarSubcategoria')}}" class="botao-menu botao_estoque"><i class="fas fa-stop"></i>Cadastrar Subcategoria</a>
+        <a href="{{url_for('CadastrarSubcategoria')}}" class="botao-menu botao_estoque  mb-2 mb-lg-0"><i class="fas fa-stop"></i>Cadastrar Subcategoria</a>
         <a href="{{url_for('CadastrarPeca')}}" class="botao-menu botao_estoque"><i
                 class="fas fa-cog fa-spin"></i>Cadastrar Peça</a>
     </div>
