--- a/templates/base.html
+++ b/templates/base.html
@@ -31,19 +31,19 @@
             <a href="{{url_for('PainelServicos')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-columns"></i>Painel</a>
-            <a href="{{url_for('BuscarClientes')}}"
+            <a href="{{url_for('usuarios.BuscarClientes')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-user"></i>Clientes</a>
-            <a href="{{url_for('BuscarVeiculos')}}"
+            <a href="{{url_for('veiculos.BuscarVeiculos')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-car"></i>Veículos</a>
-            <a href="{{url_for('BuscarMecanicos')}}"
+            <a href="{{url_for('mecanicos.BuscarMecanicos')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-wrench"></i>Mecânicos</a>
             <a href="{{url_for('OrdensServico')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-folder-open"></i>Gerenciar OS</a>
-            <a href="{{url_for('Estoque')}}"
+            <a href="{{url_for('estoque.Estoque')}}"
                 class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
                     class="fas fa-box"></i>Estoque</a>
             <a href="{{url_for('logout')}}"
@@ -56,19 +56,19 @@
             <a href="{{url_for('PainelServicos')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-columns"></i></a>
-            <a href="{{url_for('BuscarClientes')}}"
+            <a href="{{url_for('usuarios.BuscarClientes')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-user"></i></a>
-            <a href="{{url_for('BuscarVeiculos')}}"
+            <a href="{{url_for('veiculos.BuscarVeiculos')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-car"></i></a>
-            <a href="{{url_for('BuscarMecanicos')}}"
+            <a href="{{url_for('mecanicos.BuscarMecanicos')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-wrench"></i></a>
             <a href="{{url_for('OrdensServico')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-folder-open"></i></a>
-            <a href="{{url_for('Estoque')}}"
+            <a href="{{url_for('estoque.Estoque')}}"
                 class="botao-menu botao justify-content-center align-items-center"><i
                     class="fas fa-box"></i></a>
             <a href="{{url_for('logout')}}"
