--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         <button id="leftButton" onclick="mostrarCadastro()">Cadastre-se</button>
     </div>
     <div class="right">
-        <form id="formLogin" class="form" action="{{url_for('Login')}}" method="post">
+        <form id="formLogin" class="form" action="{{url_for('usuarios.Login')}}" method="post">
             <h2>Login</h2>
             <div class="form-group">
                 <input type="email" name="email" id="email" placeholder="Email" required /> 
@@ -27,7 +27,7 @@
             <button type="submit">Entrar</button>
         </form>
 
-        <form id="formCadastro" class="form" action="{{url_for('CadastrarUsuario')}}" method="post" style="display: none;">
+        <form id="formCadastro" class="form" action="{{url_for('usuarios.CadastrarUsuario')}}" method="post" style="display: none;">
             <h2>Crie a sua conta</h2>
             <div class="form-group">
                 <input type="text" name="nome" id="nome" placeholder="Nome completo" required />
