--- a/templates/cadastrar_categoria.html
+++ b/templates/cadastrar_categoria.html
@@ -10,7 +10,7 @@
 {% block conteudo %}
 
 <div class="container">
-    <form class="form-control p-3 box1" action="{{url_for('CadastrarCategoria')}}" method="post">
+    <form class="form-control p-3 box1" action="{{url_for('estoque.CadastrarCategoria')}}" method="post">
         <div>
             <h2 class="text-center">Cadastrar Categoria</h2>
         </div>
@@ -20,7 +20,7 @@
         </div>
         <div class="d-flex justify-content-center gap-2 mt-4">
             <div>
-                <a href="{{url_for('Estoque')}}" class="btn btn-primary">Voltar</a>
+                <a href="{{url_for('estoque.Estoque')}}" class="btn btn-primary">Voltar</a>
             </div>
             <div>
                 <button type="submit" class="btn btn-success">Cadastrar</button>
