--- a/templates/cadastrarclientes.html
+++ b/templates/cadastrarclientes.html
@@ -10,7 +10,7 @@
 {% block conteudo %}
 
 <div class="container">
-    <form class="form-control p-3 box1" action="{{url_for('CadastrarClientes')}}" method="post">
+    <form class="form-control p-3 box1" action="{{url_for('usuarios.CadastrarClientes')}}" method="post">
         <div>
             <h2 class="text-center">Cadastrar Cliente</h2>
         </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="d-flex justify-content-center gap-2 mt-4">
             <div>
-                <a href="{{url_for('BuscarClientes')}}" class="btn btn-primary">Voltar</a>
+                <a href="{{url_for('usuarios.BuscarClientes')}}" class="btn btn-primary">Voltar</a>
             </div>
             <div>
                 <button type="submit" class="btn btn-success">Cadastrar</button>
