--- a/templates/mecanicos.html
+++ b/templates/mecanicos.html
@@ -10,7 +10,7 @@
 {% block conteudo %}
 
 <div class="box_mecanicos d-flex flex-column mt-4">
-    <a href="{{url_for('CadastrarMecanicos')}}"class="botao-menu botao_mecanicos">
+    <a href="{{url_for('mecanicos.CadastrarMecanicos')}}"class="botao-menu botao_mecanicos">
         <i class="fas fa-plus"></i>
         <i class="fas fa-tools"></i>
         Cadastrar Mecânico
@@ -30,8 +30,8 @@
                 <td>{{mecanico.especialidade}}</td>
                 <td>
                     <div class="d-flex">
-                        <a href="{{url_for('EditarMecanico', id = mecanico.id)}}" class="editar"><i class="fa fa-edit"></i></a>
-                        <a href="{{url_for('DeletarMecanico', id = mecanico.id)}}" class="excluir"><i class="fa fa-trash"></i></a>
+                        <a href="{{url_for('mecanicos.EditarMecanico', id = mecanico.id)}}" class="editar"><i class="fa fa-edit"></i></a>
+                        <a href="{{url_for('mecanicos.DeletarMecanico', id = mecanico.id)}}" class="excluir"><i class="fa fa-trash"></i></a>
                     </div>
                 </td>
             </tr>
