--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/static/image/bg_home.jpg);
+    background-image: url(/static/image/home/bg_home.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
