Correção no html da os

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,8 @@
     {% endblock %}
 
     <div class="text-center isp">
-        <p>Feito por ISP Tecnologia</p>
-        <br>
-        <p>Copyright © 2026 Todos os Direitos Reservados</p>
+        <p class="mb-0">Feito por ISP Tecnologia</p>
+        <p class="mt-0">Copyright © 2026 Todos os Direitos Reservados</p>
     </div>
 
     <script src="{{url_for('static',
