--- a/templates/base_cadastros.html
+++ b/templates/base_cadastros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISP Serviços</title>
     <link rel="shortcut icon" href="{{url_for('static',
-    filename='image/icone.png')}}" type="image/png">
+    filename='image/icone/icone.png')}}" type="image/png">
     <link rel="stylesheet" href="{{url_for('static',
     filename='css_bootstrap/bootstrap.min.css')}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
