--- a/routes/ordens_de_servico/os_static/css/info_os.css
+++ b/routes/ordens_de_servico/os_static/css/info_os.css
@@ -1,9 +1,27 @@
 .box1 {
-    background-color: rgba(2, 2, 2, 0.6);
+    background-color: rgba(2, 2, 2, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     margin-top: 50px;
     margin-bottom: 30px;
     color: white;
+}
+
+.excluir {
+    text-decoration: none;
+    font-size: 20px;
+    width: 30px;
+    font-weight: 400;
+    display: block;
+    text-align: center;
+    color: black;
+    background-color: rgb(199, 2, 2);
+    border-radius: 5px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.excluir:hover {
+    background-color: darkred;
 }
